Use the Clean theme for my new blog

--- a/_config.yml
+++ b/_config.yml
@@ -1,17 +1,19 @@
 # Site settings
-title: Clean Blog
-header-img: img/home-bg.jpg
-email: your-email@yourdomain.com
-description: "Write your site description here. It will be used as your sites meta description as well!"
-baseurl: "/startbootstrap-clean-blog-jekyll"
-url: "http://yourdomain.com"
-twitter_username: SBootstrap
-github_username:  davidtmiller
-facebook_username:  IronSummitMedia
+title: alecu
+header-img: img/reflektor-full.jpg
+email: alecu@protocultura.net
+description: "Retrofuturismo con alecu"
+baseurl: ""
+url: "http://alecu.protocultura.net"
+twitter_username: alecura
+github_username:  alecu
+linkedin_username:  alecura
+launchpad_username:  alecu
+#facebook_username:  IronSummitMedia
 
 # Build settings
 markdown: kramdown
 highlighter: pygments
 permalink: pretty
-paginate: 5
+paginate: 10
 exclude: ["less","node_modules","Gruntfile.js","package.json","README.md"]
