change the syntax highlighter to Rouge

--- a/_config.yml
+++ b/_config.yml
@@ -13,7 +13,7 @@ launchpad_username:  alecu
 
 # Build settings
 markdown: kramdown
-highlighter: pygments
+highlighter: rouge
 permalink: pretty
 paginate: 10
 exclude: ["less","node_modules","Gruntfile.js","package.json","README.md"]
