Set theme jekyll-theme-cayman

--- a/_config.yml
+++ b/_config.yml
@@ -17,3 +17,5 @@ highlighter: pygments
 permalink: pretty
 paginate: 10
 exclude: ["less","node_modules","Gruntfile.js","package.json","README.md"]
+
+theme: jekyll-theme-cayman
